# f1tenth_labs

./: .gitignore  README.md
cartographer_config/: README.md  f110_2d.launch  f110_2d.lua  f110_2d_viz.launch
f110_simulator/: CMakeLists.txt  README.md  package.xml
f110_simulator/launch/: racecar_model.launch
f110_simulator/node/: behavior_controller.cpp  mux.cpp  simulator.cpp
f110_simulator/src/: distance_transform.cpp  ks_kinematics.cpp  precompute.cpp  scan_simulator_2d.cpp  st_kinematics.cpp
f1tenth_lab_template/handout/: f1tenth_lab_template.tex
lab1/latex/: lab1.aux  lab1.out  lab1.tex  lab1_solution_template.aux  lab1_solution_template.out  lab1_solution_template.tex
lab2/code/: CMakeLists.txt  package.xml
lab2/code/scripts/: safety_node.py
lab2/code/src/: safety_node.cpp
lab2/latex/: lab2.aux  lab2.out  lab2.tex
lab3/code/: CMakeLists.txt  package.xml
lab3/latex/: lab3.aux  lab3.out  lab3.tex
lab4/code/: CMakeLists.txt  package.xml
lab4/latex/: lab4.aux  lab4.out  lab4.tex
lab5/code/: CMakeLists.txt  package.xml
lab5/latex/: lab5.aux  lab5.out  lab5.tex  lab5_solution_template.aux  lab5_solution_template.out
lab6/code/: CMakeLists.txt  package.xml
lab6/latex/: lab6.aux  lab6.out  lab6.tex
lab7/code/: CMakeLists.txt  package.xml
lab7/latex/: lab7.aux  lab7.out  lab7.tex  lab7_solutions_template.aux  lab7_solutions_template.out  lab7_solutions_template.tex
lab8/latex/: lab8.aux  lab8.out  lab8.tex
lab9/handout/: lab9.tex
lab9/inclass_discussion/: inclass_discussion.tex
waypoint_logger/: package.xml
(+20 files in other folders)
